<resources>
    <string name="app_name">BondoMan</string>

    <string name="scan_fragment">Scan Fragment</string>
    <string name="transaction_fragment">Transaction Fragment</string>
    <string name="graph_fragment">Graph Fragment</string>
    <string name="settings_fragment">Settings Fragment</string>
    <string name="twibbon_fragment">Twibbon Fragment</string>

    <string name="navbar_scan">Scan</string>
    <string name="navbar_graph">Graph</string>
    <string name="navbar_transaction">Transaction</string>
    <string name="navbar_settings">Settings</string>
    <string name="navbar_twibbon">Twibbon</string>

    <string name="logout">Logout</string>
    <string name="image_view_desc">Desc</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="how_would_you_like_to_do">How would you like to do?</string>
    <string name="logo">Logo</string>

    <!--    Scan Description-->
    <string name="scan_header">Scan</string>
    <string name="error_scan">Unable to detect</string>
    <string name="upload_image">Upload Image Icon</string>

    <!--    Twibbon Description-->
    <string name="twibbon_header">Twibbon</string>
    <string name="capture">Capture</string>
    <string name="retake">Retake</string>
    <string name="change">Change</string>
    <string name="twibbon_command">Put your face inside the twibbon</string>

    <!--    Transaction-->
    <string name="transaction_header">Transaksi</string>
    <string name="total_balance">Total Balance</string>
    <string name="income">Pemasukan</string>
    <string name="expense">Pengeluaran</string>
    <string name="all">Semua</string>

    <!--    Add Transaction-->
    <string name="add_transaction">Tambah transaksi</string>
    <string name="tambah">Tambah</string>
    <string name="title_hint">Nama</string>
    <string name="amount_hint">Nominal</string>
    <string name="category">kategori</string>

    <!--    Transaction Detail-->
    <string name="detail_transaction">Detail Transaksi</string>
    <string name="simpan">Simpan</string>


    <!--    Content Description-->
    <string name="back_button">Back</string>
    <string name="category_symbol">category</string>
    <string name="delete">delete button</string>
    <string name="add">add button</string>

    <!--    Settings-->
    <string name="setting_header">Setting</string>
    <string name="randomize_transaction">Randomize Transaction</string>
    <string name="download_history">Download History</string>
    <string name="upload_history">Upload History</string>
    <string name="logout_text">Log-Out</string>
</resources>
