<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/primaryBlack"
    tools:context=".TransactionDetailActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/transaction_detail_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primaryBlack"
        app:layout_constraintBottom_toTopOf="@+id/detail_placeholder"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="15dp">

            <ImageView
                android:id="@+id/back_button_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/back_button"
                android:src="@drawable/back_icon"
                app:layout_constraintEnd_toStartOf="@+id/add_header_text"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/add_header_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/detail_transaction"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/back_button_detail"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.AppBarLayout>
    <FrameLayout
        android:id="@+id/detail_placeholder"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transaction_detail_header"
        app:layout_constraintEnd_toEndOf="parent">
        <ImageView
            android:id="@+id/update_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/category_symbol"
            android:src="@drawable/expense_symbol"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="100dp"
            android:scaleType="fitCenter" />

        <TextView
            android:id="@+id/update_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/update_category"
            android:text="@string/category_symbol"/>
        <EditText
            android:id="@+id/update_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_hint"
            android:autofillHints="name"
            android:background="@drawable/edit_text_holder"
            android:inputType="text"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/update_date"
            android:text="@string/category_symbol"/>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>