<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryBlack"
    tools:context=".ui.scan.ScanFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/scan_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primaryBlack"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/scan_header_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/scan_header"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_marginVertical="8dp"
                android:layout_gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <ImageButton
        android:id="@+id/upload_image"
        android:layout_marginVertical="20dp"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center_horizontal"
        android:background="@drawable/upload_image"
        android:layout_width="50dip"
        android:layout_height="50dip"
        android:contentDescription="@string/upload_image"
        app:layout_constraintStart_toEndOf="@id/scan_button"
        app:layout_constraintTop_toBottomOf="@+id/guideline"/>

    <ImageButton
        android:id="@+id/scan_button"
        android:layout_marginVertical="20dp"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center_horizontal"
        android:background="@drawable/scan_button"
        android:layout_width="50dip"
        android:layout_height="50dip"
        android:contentDescription="@string/upload_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline"/>

    <TextView
        android:id="@+id/scan_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center_horizontal"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline"
        tools:text="@string/error_scan"/>

    <FrameLayout
        android:id="@+id/frame_layout_camera"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/primaryBlack"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scan_header">

        <androidx.camera.view.PreviewView
            android:id="@+id/scan_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>