<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/primaryBlack"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.transaction.TransactionFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/twibbon_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primaryBlack"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/twibbon_header_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/transaction_header"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_marginVertical="8dp"
                android:layout_gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="15dp"
    >

        <androidx.cardview.widget.CardView
            android:id="@+id/cart_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:cardBackgroundColor="@color/primaryDarker"
            app:layout_constraintTop_toTopOf="parent"
            app:cardCornerRadius="20dp">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/menu_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:paddingTop="15dp"
                android:paddingBottom="35dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <EditText
                        android:id="@+id/title_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:hint="@string/title_hint"
                        android:inputType="text"
                        android:padding="10dp"
                        app:layout_constraintBottom_toTopOf="@id/amount_input"
                        app:layout_constraintWidth="match_parent"
                        android:layout_marginBottom="20dp"
                        />

                    <EditText
                        android:id="@+id/amount_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:hint="@string/amount_hint"
                        android:inputType="number"
                        android:padding="10dp"
                        app:layout_constraintTop_toBottomOf="@+id/title_input" />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</LinearLayout>